--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,11 @@ body {
  text-align: center;
 }
 .app_title {
+ width: 100dvw;
  text-align: center;
- margin-top: 1rem;
+ margin-top: 0.5rem;
  margin-bottom: 0.2rem;
- font-size: 2rem;
+ font-size: 1.8rem;
  font-family: "Rock Salt", cursive;
  color: blueviolet;
 }
