--- a/src/components/Card_List/Card_list.style.css
+++ b/src/components/Card_List/Card_list.style.css
@@ -1,5 +1,5 @@
 .card_list {
- width: 90dvw;
+ width: 90vw;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -12,7 +12,7 @@
  background-color: #393e46;
  border: 1px solid grey;
  color: #eeeeee;
- border-radius: 35px;
+ border-radius: 10px;
  padding: 15px;
  cursor: pointer;
  backface-visibility: hidden;
@@ -21,5 +21,16 @@
 .card_container:hover {
  transform: scale(1.02);
 }
-@media screen and(max-width: 430px) {
+.card_img {
+ padding: 20px;
+}
+@media screen and (max-width: 430px) {
+ .card_list {
+  grid-template-columns: 1fr 1fr;
+  gap: 0px;
+ }
+ .card_container {
+  font-size: 0.7rem;
+  padding: 2px;
+ }
 }
