--- a/src/components/Search_bar/Search_bar.style.css
+++ b/src/components/Search_bar/Search_bar.style.css
@@ -6,6 +6,7 @@
  padding: 10px;
  text-align: center;
  width: 250px;
+ color: white;
  background: #393e46;
  border-radius: 20px;
  line-height: 20px;
